--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="script copy.js"></script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
